fix lint script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Data structure library for JavaScript",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./**/*.js",
+    "lint": "./node_modules/.bin/eslint /**/*.js",
     "test": "./node_modules/mocha/bin/mocha ./**/*.test.js"
   },
   "repository": {
