--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Data structure library for JavaScript",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./**/*.js",
+    "lint": "./node_modules/.bin/eslint './**/*.js' --ignore-path .gitignore",
     "test": "./node_modules/mocha/bin/mocha ./**/*.test.js",
     "cover": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha ./test/**/*.test.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
